--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,4 +23,5 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 qmx_backend_lib = { version = "0.1.0", path = "../../qmx_backend_lib" }
+chrono = "0.4.41"
 
