--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
     "@tauri-apps/plugin-opener": "^2",
+    "libphonenumber-js": "^1.12.15",
     "vue": "^3.5.13"
   },
   "devDependencies": {
