--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qmx-chris233",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.8.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2.7.1",
     "@vitejs/plugin-vue": "^5.2.1",
+    "prettier": "^3.6.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
     "vue-tsc": "^2.1.10"
