feat(api): 添加学生成绩更新和删除功能
- 新增 deleteStudentScore 和 updateStudentScore 方法
- 优化 getStudentScores 方法，返回 StudentScoresResponse 对象
- 在前端集成新功能，支持成绩更新和删除操作
- 重构部分代码以支持新功能

--- a/settings.local.json
+++ b/settings.local.json
@@ -4,7 +4,8 @@
   "includeCoAuthoredBy": false,
   "permissions": {
     "additionalDirectories": [
-      "/data/data/com.termux/files/home/qmx_backend_lib"
+      "/data/data/com.termux/files/home/qmx_backend_lib",
+      "/home/Chris233/Desktop/QMX_PROJECT/qmx_backend_lib"
     ]
   }
 }
