--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 qmx_backend_lib = { version = "2.1.0", path = "../../qmx_backend_lib" }
 chrono = "0.4.41"
+log = "0.4.28"
+simple_logger = "5.0"
 
