--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,7 +22,7 @@ tauri = { version = "2.7", features = ["unstable"] }
 tauri-plugin-opener = "2.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-qmx_backend_lib = { version = "2.2.0", path = "../../qmx_backend_lib" }
+qmx_backend_lib = { git = "https://github.com/H-Chris233/qmx_backend_lib" }
 chrono = "0.4.41"
 log = "0.4.28"
 simple_logger = "5.0"
