--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,18 +26,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # 首先安装 pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+
+      # 然后设置 Node.js 和缓存
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'pnpm'
-
-      # 使用专门的 pnpm 安装动作而不是 npm install -g pnpm
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: false
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
