--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # 桌面平台
           - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin'
           - platform: 'macos-latest'
@@ -21,38 +22,72 @@ jobs:
             args: ''
           - platform: 'windows-latest'
             args: ''
+          # Android 平台 (仅保留 arm64 和 armv7)
+          - platform: 'ubuntu-22.04'
+            args: '--target aarch64-linux-android'
+            android: true
+          - platform: 'ubuntu-22.04'
+            args: '--target armv7-linux-androideabi'
+            android: true
+          # iOS 平台 (仅保留 arm64)
+          - platform: 'macos-latest'
+            args: '--target aarch64-apple-ios'
+            ios: true
 
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v4
 
-      # 首先安装 pnpm
+      # 安装 pnpm
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      # 然后设置 Node.js 和缓存
+      # 设置 Node.js 和缓存
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'pnpm'
 
+      # 安装 Rust
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
+      # 安装 Android 工具链 (仅限 Android 构建)
+      - name: Install Android SDK and NDK
+        if: matrix.android == true
+        uses: android-actions/setup-android@v2
+
+      - name: Install Android targets
+        if: matrix.android == true
+        run: |
+          rustup target add aarch64-linux-android armv7-linux-androideabi
+
+      # 安装 iOS 工具链 (仅限 iOS 构建)
+      - name: Install iOS target
+        if: matrix.ios == true
+        run: |
+          rustup target add aarch64-apple-ios
+          sudo gem install cocoapods
+
+      # Ubuntu 特定依赖
       - name: Install dependencies (Ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+          # 如果是 Android 构建，还需要安装一些额外依赖
+          if [ "${{ matrix.android }}" = "true" ]; then
+            sudo apt-get install -y openjdk-17-jdk android-sdk-platform-tools-common
+          fi
 
+      # 安装前端依赖
       - name: Install frontend dependencies
         run: pnpm install
 
+      # 构建 Tauri 应用
       - name: Build Tauri App
         uses: tauri-apps/tauri-action@v0
         env:
