--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,17 +60,30 @@ jobs:
         if: matrix.android == true
         uses: android-actions/setup-android@v2
 
+      - name: Setup Android NDK
+        if: matrix.android == true
+        run: |
+          # 设置 Android NDK 环境变量
+          echo "ANDROID_NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "ANDROID_NDK_ROOT=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+          echo "NDK_HOME=$ANDROID_NDK_ROOT" >> $GITHUB_ENV
+
       - name: Install Android targets
         if: matrix.android == true
         run: |
           rustup target add aarch64-linux-android armv7-linux-androideabi
+          # 安装 cargo-ndk 用于 Android 构建
+          cargo install cargo-ndk
 
       # 安装 iOS 工具链 (仅限 iOS 构建)
       - name: Install iOS target
         if: matrix.ios == true
         run: |
           rustup target add aarch64-apple-ios
+          rustup target add x86_64-apple-ios  # 添加模拟器支持
           sudo gem install cocoapods
+          # 安装 cargo-xcode 用于 iOS 构建
+          cargo install cargo-xcode
 
       # Ubuntu 特定依赖
       - name: Install dependencies (Ubuntu only)
@@ -87,11 +100,27 @@ jobs:
       - name: Install frontend dependencies
         run: pnpm install
 
+      # 环境检查和配置
+      - name: Check environment
+        run: |
+          echo "Rust version: $(rustc --version)"
+          echo "Node version: $(node --version)"
+          echo "pnpm version: $(pnpm --version)"
+          if [ "${{ matrix.android }}" = "true" ]; then
+            echo "ANDROID_HOME: $ANDROID_HOME"
+            echo "ANDROID_NDK_HOME: $ANDROID_NDK_HOME"
+            ls -la $ANDROID_HOME
+          fi
+
       # 构建 Tauri 应用
       - name: Build Tauri App
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Android 特定环境变量
+          ANDROID_HOME: ${{ matrix.android == 'true' && env.ANDROID_HOME || '' }}
+          ANDROID_NDK_HOME: ${{ matrix.android == 'true' && env.ANDROID_NDK_HOME || '' }}
+          NDK_HOME: ${{ matrix.android == 'true' && env.NDK_HOME || '' }}
         with:
           tagName: app-v__VERSION__
           releaseName: 'App v__VERSION__'
