--- a/.github/workflows/ci-fixed.yml
+++ b/.github/workflows/ci-fixed.yml
@@ -72,7 +72,7 @@ jobs:
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libsoup-3.0-dev build-essential curl wget file
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libjavascriptcoregtk-4.1-dev libsoup-3.0-dev build-essential curl wget file
 
       # 安装前端依赖
       - name: Install frontend dependencies
