--- a/.github/workflows/ci-fixed.yml
+++ b/.github/workflows/ci-fixed.yml
@@ -22,6 +22,10 @@ jobs:
             args: ''
           - platform: 'windows-latest'
             args: ''
+          # Android 平台
+          - platform: 'ubuntu-22.04'
+            args: '--target aarch64-linux-android'
+            android: true
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -51,6 +55,15 @@ jobs:
         run: |
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
+
+      # Android 特定设置
+      - name: Setup Android (if Android build)
+        if: matrix.android == true
+        uses: android-actions/setup-android@v2
+
+      - name: Add Android targets
+        if: matrix.android == true
+        run: rustup target add aarch64-linux-android
 
       # Ubuntu 依赖
       - name: Install Ubuntu dependencies
