--- a/.github/workflows/ci-fixed.yml
+++ b/.github/workflows/ci-fixed.yml
@@ -1,4 +1,4 @@
-name: 'publish'
+name: 'Tauri Build - Fixed'
 
 on:
   pull_request:
@@ -13,6 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # 桌面平台
           - platform: 'macos-latest'
             args: '--target aarch64-apple-darwin'
           - platform: 'macos-latest'
@@ -26,33 +27,44 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 首先安装 pnpm
+      # 安装 pnpm
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
 
-      # 然后设置 Node.js 和缓存
+      # 设置 Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: 'pnpm'
 
+      # 安装 Rust
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
-      - name: Install dependencies (Ubuntu only)
+
+      # macOS 额外目标设置
+      - name: Add macOS targets
+        if: matrix.platform == 'macos-latest'
+        run: |
+          rustup target add x86_64-apple-darwin
+          rustup target add aarch64-apple-darwin
+
+
+      # Ubuntu 依赖
+      - name: Install Ubuntu dependencies
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libwebkit2gtk-4.1-dev libjavascriptcoregtk-4.1-dev libsoup-3.0-dev build-essential curl wget file
 
+      # 安装前端依赖
       - name: Install frontend dependencies
         run: pnpm install
 
+      # 构建 Tauri 应用
       - name: Build Tauri App
         uses: tauri-apps/tauri-action@v0
         env:
