--- a/.github/workflows/ci-fixed.yml
+++ b/.github/workflows/ci-fixed.yml
@@ -1,4 +1,4 @@
-name: 'Tauri Build - Fixed'
+name: 'Release'
 
 on:
   pull_request:
@@ -70,8 +70,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: app-v__VERSION__
-          releaseName: 'App v__VERSION__'
+          tagName: v__VERSION__
+          releaseName: 'QMX v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
           releaseDraft: false
           prerelease: true
