fix(security,a11y,types): harden entry flow, guard localStorage, improve a11y, and enable strict TS
- Prefix and guard localStorage keys; remove blocking alerts
- Add aria-labels, dialog semantics, Esc-close; basic focus handling
- Reactive-safe modal updates; wrap confirm callbacks
- Throttle/RAF resize, debounce types; remove prod logs
- Fix TS types in Grade/Score components; enable strict flags
- Clean Vite env typing without ts-ignore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,15 +21,15 @@
     "noFallthroughCasesInSwitch": true,
     
     /* Enhanced type safety */
-    "noImplicitAny": false,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "strictBindCallApply": false,
-    "strictPropertyInitialization": false,
-    "noUncheckedIndexedAccess": false,
-    "exactOptionalPropertyTypes": false
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
