--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qmx-chris233"
-version = "0.10.3"}},{
+version = "0.10.3"
 description = "A Tauri App"
 authors = ["Chris233 <https://github.com/H-Chris233>"]
 edition = "2021"
